Use e30-c34 devel branch for testing
Signed-off-by: Jarod Wilson <jarodwilson@gmail.com>

--- a/eufy-security-ws/config.yaml
+++ b/eufy-security-ws/config.yaml
@@ -1,15 +1,15 @@
 name: eufy-security-ws
 description: Allows you to control Eufy security devices over websocket by connecting to the Eufy cloud servers and local/remote stations
-version: 1.9.1
+version: 1.9.2
 slug: "eufy_security_ws"
-url: https://github.com/bropat/hassio-eufy-security-ws
+url: https://github.com/jarodwilson/hassio-eufy-security-ws
 init: false
 arch:
   - aarch64
   - amd64
-  - armhf
-  - armv7
-  - i386
+#  - armhf
+#  - armv7
+#  - i386
 #https://github.com/codenotary/cas/issues/296
 #codenotary: patrick.broetto@gmail.com
 stage: stable
@@ -42,4 +42,4 @@ schema:
   stations:
     - serial_number: str
       ip_address: match(^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$)
-image: bropat/hassio-eufy-security-ws-{arch}
+image: jwilsonrh/hassio-eufy-security-ws-{arch}
