--- a/eufy-security-ws/Dockerfile
+++ b/eufy-security-ws/Dockerfile
@@ -4,14 +4,11 @@ FROM $BUILD_FROM
 ARG EUFY_SECURITY_WS_VERSION
 
 WORKDIR /usr/src/app
-RUN \
-    set -x \
-    && apk add --no-cache \
-    nodejs \
-    npm \
-    jq \
-    && npm install --force \
-    "eufy-security-ws@${EUFY_SECURITY_WS_VERSION}"
+RUN apk update && apk upgrade
+RUN apk add "nodejs>20.18"
+RUN apk add --no-cache npm jq git
+RUN npm install typescript
+RUN set -x && npm install --force "https://github.com/jarodwilson/eufy-security-ws/releases/download/1.9.2/eufy-security-ws-1.9.2.tgz"
 
 COPY run.sh /
 RUN chmod a+x /run.sh
